# Rust_Pet_Projects

fs-watch-rs/: .dockerignore  Cargo.toml  Dockerfile  README.md  config.example.toml
fs-watch-rs/fs-watch-rs/: Cargo.toml
fs-watch-rs/src/: cli.rs  config.rs  errors.rs  event.rs  fs-watch-rs-ТЗ.docx.txt  lib.rs  main.rs  watcher.rs
fs-watch-rs/src/reporter/: console.rs  file.rs  mod.rs  webhook.rs
fs-watch-rs/tests/: event_tests.rs
