[package]
name = "fs-watch-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI и структура
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"

# Файловая система и время
notify = "6.1"
chrono = "0.4"
glob = "0.3"

# Оформление
colored = "2.1"

# Сериализация и конфиг (для следующих итераций)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Асинхронность и сеть (для webhook, следующие итерации)
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3.10"
mockito = "1.4"
